wishlist backend service implemented also connected with frontend